[package]
name = "hzospal"
version = "0.1.0"
edition = "2024"

[dependencies]
btleplug = "0.11.8"
crossterm = "0.29.0"
crypto_box = "0.9.1"
env_logger = "0.11.9"
futures = "0.3.31"
log = "0.4.29"
prost = "0.14.3"
rand = "0.10.0"
ratatui = "0.30.0"
tokio = { version = "1.49.0", features = ["full"] }
uuid = "1.19.0"

[build-dependencies]
prost-build = "0.14.3"
